some images served from new repo

--- a/arduino.html
+++ b/arduino.html
@@ -2,7 +2,7 @@
 <html>
 
   <script type="text/javascript">var blog_title = "Getting started with Arduino";</script>
-  <script type="text/javascript">var publication_date = "July 17, 2025";</script>
+  <script type="text/javascript">var publication_date = "August 10, 2025";</script>
   <head>
     <link rel="icon" href="images/ml_logo.png">
     <meta charset='utf-8'>
@@ -40,7 +40,7 @@ Microcontrollers come in a single integrated circuit, like this.
 
 <p>
 <figure>
-  <img title="Renesas RA4M1, a.k.a. Arm® Cortex®-M4" alt="Renesas RA4M1, a.k.a. Arm® Cortex®-M4" src="images/arduino/arm_cortex_m4.png">
+  <img title="Renesas RA4M1, a.k.a. Arm® Cortex®-M4" alt="Renesas RA4M1, a.k.a. Arm® Cortex®-M4" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/arduino/arm_cortex_m4.png">
   <figcaption>Renesas RA4M1, a.k.a. Arm® Cortex®-M4</figcaption>
 </figure>
 </p>
@@ -52,7 +52,7 @@ Arduino helps out hobbyists by putting them on a larger board like this.
 <p>
 <figure>
   <img title="Arm Cortex microcontroller in its native environment, an Arduino UNO R4 Minima" alt="Arm Cortex microcontroller in its native environment, an Arduino UNO R4 Minima
-" src="images/arduino/arduino_uno_r4.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/arduino/arduino_uno_r4.png">
   <figcaption>Arm Cortex microcontroller in its native environment, an Arduino UNO R4 Minima</figcaption>
 </figure>
 </p>
@@ -97,7 +97,7 @@ Shields seem to be much more common than carriers.
 <p>
 <figure>
   <img title="from https://www.detailedpedia.com/wiki-Arduino" alt="A stack of Arduino boards
-" src="images/arduino/arduino_stack.jpg">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/arduino/arduino_stack.jpg">
   <figcaption>from https://www.detailedpedia.com/wiki-Arduino</figcaption>
 </figure>
 </p>
@@ -170,7 +170,7 @@ window.
 <p>
 <figure>
   <img title="The starting screen on the Arduino IDE" alt="Screenshot of the Arduino IDE showing a code editing window
-" src="images/arduino/arduino_ide.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/arduino/arduino_ide.png">
   <figcaption>The starting screen on the Arduino IDE</figcaption>
 </figure>
 </p>
@@ -190,7 +190,7 @@ which covers both versions.
 
 <p>
 <img alt="Screenshot of the Arduino IDE documentation page
-" src="images/arduino/arduino_ide_docs.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/arduino/arduino_ide_docs.png">
 </p>
 
 <h3><a id="Connecting-the-board"></a><a href="#Connecting-the-board">Connecting the board</a></h3>
@@ -205,7 +205,7 @@ your computer with the IDE to the USB jack on the board.
 <p>
 <figure>
   <img title="USB and power cords connected" alt="An Arduino board plugged in to power and USB
-" src="images/arduino/plugged_in.jpg">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/arduino/plugged_in.jpg">
   <figcaption>USB and power cords connected</figcaption>
 </figure>
 </p>
@@ -226,7 +226,7 @@ Luckily the IDE also has a lot of example code. In the IDE go to
 
 <p>
 <img alt="A view of the Blink.ino code in the Arduino IDE
-" src="images/arduino/blink_ide.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/arduino/blink_ide.png">
 </p>
 
 <p>
@@ -281,7 +281,7 @@ Here's a deeper dive into
 </ol>
 
 <p>
-<img alt="Block diagram illustrating the four steps listed above" src="images/arduino/upload_process.png">
+<img alt="Block diagram illustrating the four steps listed above" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/arduino/upload_process.png">
 </p>
 
 <p>
