empirical RL post aded

--- a/data_eng_for_beginners.html
+++ b/data_eng_for_beginners.html
@@ -2,7 +2,7 @@
 <html>
 
   <script type="text/javascript">var blog_title = "Data Engineering for the Absolute Beginner";</script>
-  <script type="text/javascript">var publication_date = "August 05, 2025";</script>
+  <script type="text/javascript">var publication_date = "August 10, 2025";</script>
   <head>
     <link rel="icon" href="images/ml_logo.png">
     <meta charset='utf-8'>
@@ -45,7 +45,7 @@ is the structure the atoms take when they’re put together.
 </p>
 
 <p>
-<img alt="Data file icon from a data engineering architecture diagram" src="images/data_eng_for_beginners/data_icon.png">
+<img alt="Data file icon from a data engineering architecture diagram" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_icon.png">
 </p>
 
 <p>
@@ -132,7 +132,7 @@ an oil pipeline moves oil from the well to the refinery.
 </p>
 
 <p>
-<img alt="Data movement arrow, as in an architecture diagram" src="images/data_eng_for_beginners/pipeline_arrow.png">
+<img alt="Data movement arrow, as in an architecture diagram" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/pipeline_arrow.png">
 </p>
 
 <p>
@@ -162,7 +162,7 @@ a feed from a remote sensor, a spreadsheet file loaded from a hard drive.
 </p>
 
 <p>
-<img alt="Data ingress from a data source" src="images/data_eng_for_beginners/data_ingress.png">
+<img alt="Data ingress from a data source" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_ingress.png">
 </p>
 
 <p>
@@ -172,7 +172,7 @@ In a data system, sources are the inputs and sinks are the outputs.
 </p>
 
 <p>
-<img alt="Data egress to a data sink" src="images/data_eng_for_beginners/data_egress.png">
+<img alt="Data egress to a data sink" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_egress.png">
 </p>
 
 <p>
@@ -207,7 +207,7 @@ as <strong>ETL</strong>, which has expanded to mean generally "doing stuff with 
 </p>
 
 <p>
-<img alt="Data movement arrow representing extraction, transformation, and loading" src="images/data_eng_for_beginners/etl.png">
+<img alt="Data movement arrow representing extraction, transformation, and loading" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/etl.png">
 </p>
 
 <p>
@@ -291,7 +291,7 @@ An extremely common one is the database.
 </p>
 
 <p>
-<img alt="Database icon from a data engineering architecture diagram" src="images/data_eng_for_beginners/database_icon.png">
+<img alt="Database icon from a data engineering architecture diagram" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/database_icon.png">
 </p>
 
 <p>
@@ -316,7 +316,7 @@ example of it.
 
 <p>
 <img alt="An empty table, representing a relational database
-" src="images/data_eng_for_beginners/blank_table.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/blank_table.png">
 </p>
 
 <p>
@@ -325,7 +325,7 @@ Your email inbox is probably an example of this.
 
 <p>
 <img alt="An email inbox as a relational database
-" src="images/data_eng_for_beginners/email_table.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/email_table.png">
 </p>
 
 <p>
@@ -406,7 +406,7 @@ combing through tables to find the one you want.
 <h3><a id="Data-store"></a><a href="#Data-store">Data store</a></h3>
 
 <p>
-Tables become very awkward when storing larger items, like images,
+Tables become very awkward when storing larger items, like https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main,
 audio, or video files. These are often much larger than the other data types
 in a table and can throw off the database's strategies for efficient
 storage and quick access. In these cases, the files can be stored in
@@ -418,7 +418,7 @@ location where it can be read and updated.
 <figure>
   <img title="A data store is perfect for storing a large number of irregular objects" alt="A zoomed out image of a vast warehouse, full of boxes where
 The Ark of the Covenant was stored in the closing credits of Indiana Jones
-" src="images/data_eng_for_beginners/hangar_51.jpg">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/hangar_51.jpg">
   <figcaption>A data store is perfect for storing a large number of irregular objects</figcaption>
 </figure>
 </p>
@@ -442,7 +442,7 @@ are databases made to be fast.
 <p>
 <img alt="An icon representing a key-value store, with a row of small boxes
 pointing with arrows to a row of big boxes
-" src="images/data_eng_for_beginners/key_value_store.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/key_value_store.png">
 </p>
 
 <p>
@@ -459,7 +459,7 @@ located, and easy to reach. Compared to rummaging around in the drawer for the
 <img alt="A woodshop with a pegboard full of tools like mallets, wrenches, saws, and levels
 https://thewoodlab.net/tag/workshop/
  © 2009-2025 by Jim Ashley is licensed under CC BY-NC-ND 4.0
- " src="images/data_eng_for_beginners/woodshop_pegboard.jpg">
+ " src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/woodshop_pegboard.jpg">
 </p>
 
 <p>
@@ -489,7 +489,7 @@ called <strong>data architectures</strong>.
 
 <p>
 <img alt="An icon representing a data warehouse
-" src="images/data_eng_for_beginners/data_warehouse_icon.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_warehouse_icon.png">
 </p>
 
 <p>
@@ -501,7 +501,7 @@ up-to-date, and ready to be put to work.
 
 <p>
 <img alt="An image equating many databases to a single data warehouse
-" src="images/data_eng_for_beginners/data_warehouse.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_warehouse.png">
 </p>
 
 <p>
@@ -527,7 +527,7 @@ and evaluating the candidates based on those needs.
 
 <p>
 <img alt="An icon representing a data catalog
-" src="images/data_eng_for_beginners/catalog_icon.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/catalog_icon.png">
 </p>
 
 <p>
@@ -576,7 +576,7 @@ from chaotic to organized, from raw to refined.
 <p>
 <img alt="A chart showing the progression of layers from source layer to
 staging layer to storage layer to presentation layer
-" src="images/data_eng_for_beginners/data_layers.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_layers.png">
 </p>
 
 <h3><a id="Source-layer"></a><a href="#Source-layer">Source layer</a></h3>
@@ -603,7 +603,7 @@ properly ingested into the factory.
 
 <p>
 <img alt="An icon representing a data lake
-" src="images/data_eng_for_beginners/data_lake_icon.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_lake_icon.png">
 </p>
 
 <p>
@@ -618,7 +618,7 @@ sometimes data swamp, when frustration levels run high).
 
 <p>
 <img alt="A data lake portrayed as lots of data arrayed chaotically
-" src="images/data_eng_for_beginners/data_lake.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_lake.png">
 </p>
 
 <p>
@@ -667,7 +667,7 @@ as well as data lake offerings from Dremio, Cloudera, Teradata, and a dozen othe
 <p>
 <img alt="An icon of a data mart, which is a weirdly abstract concept to represent in
 a thousand pixels
-" src="images/data_eng_for_beginners/data_mart.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_mart.png">
 </p>
 
 <p>
@@ -684,7 +684,7 @@ month, broken down by category (baguettes, rye, sourdough, seeded whole wheat, e
 <p>
 <img alt="The main data layers, depicted as icons, in what starts to look like a
 data architecture diagram
-" src="images/data_eng_for_beginners/data_layers_icons.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/data_layers_icons.png">
 </p>
 
 <p>
@@ -739,7 +739,7 @@ to create a fit-for-purpose data product.
 
 <p>
 <img alt="An icon of an orchestrator, a clock set within a toothed gear
-" src="images/data_eng_for_beginners/orchestrator_icon.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/orchestrator_icon.png">
 </p>
 
 <p>
@@ -841,7 +841,7 @@ country of origin. You may also hear horizontal partitioning referred to as
 <p>
 <figure>
   <img title="A horizontally partitioned database is divided up along row boundaries." alt="A database horizontally partitioned, that is, divided according to rows
-" src="images/data_eng_for_beginners/horizontal_partition.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/horizontal_partition.png">
   <figcaption>A horizontally partitioned database is divided up along row boundaries.</figcaption>
 </figure>
 </p>
@@ -856,7 +856,7 @@ are rarely accessed.
 <p>
 <figure>
   <img title="A vertically partitioned database is divided up along column boundaries." alt="A database vertically partitioned, that is, divided according to columns
-" src="images/data_eng_for_beginners/vertical_partition.png">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/vertical_partition.png">
   <figcaption>A vertically partitioned database is divided up along column boundaries.</figcaption>
 </figure>
 </p>
@@ -900,7 +900,7 @@ but it may take a little time.
 <figure>
   <img title="Mister Invincible's superpower is eventual concurrency. Original cartoon from Pascal Jousselin's Mister Invincible. https://www.magnetic-press.com/mr-invincible/" alt="Original cartoon from Pascal Jousselin's Mister Invincible
 https://www.magnetic-press.com/mr-invincible/
-" src="images/data_eng_for_beginners/eventual_consistency.jpg">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/eventual_consistency.jpg">
   <figcaption>Mister Invincible's superpower is eventual concurrency. Original cartoon from Pascal Jousselin's Mister Invincible. https://www.magnetic-press.com/mr-invincible/</figcaption>
 </figure>
 </p>
@@ -1278,7 +1278,7 @@ And the toughest question of all:
 <p>
 <figure>
   <img title="Tag yourself" alt="sandwich alignment image https://twitter.com/matttomic/status/859117370455060481/photo/1
-" src="images/data_eng_for_beginners/sandwich_alignment.jpeg">
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/data_eng_for_beginners/sandwich_alignment.jpg">
   <figcaption>Tag yourself</figcaption>
 </figure>
 </p>
