empirical RL post aded

--- a/empirical_design_rl.html
+++ b/empirical_design_rl.html
@@ -44,8 +44,7 @@ How should you measure and aggregate performance? Do we use rules of thumb to se
 hyperparameters or some systematic search? What are the right baseline algorithms to
 compare against? Which environments should you use? What does good learning even look
 like in a given environment? The answer to each question can greatly impact the credibility
-and utility of the result, ranging from insightful to down-right misleading](
-https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_a.png
+and utility of the result, ranging from insightful to down-right misleading](https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_a.png
 "Opening paragraph from the paper")
 </p>
 
@@ -54,8 +53,7 @@ The paper is refreshingly concrete, fully loaded with examples, case studies, re
 </p>
 
 <p>
-![Key insights: evaluating a fully-specified algorithm 1. A single agent’s performance is informative, however, consider plotting the performance of individual runs to gain additional understanding of your algorithm.  2. Agent behavior, with the same algorithm and environment, can be very different across random seeds. Consider reporting this variability using sample standard deviations or tolerance intervals, rather than just reporting the mean or median performance.  3. Confidence intervals around the mean primarily tell us about our certainty in our mean estimate, not about the variability in the underlying agents. If you primarily care about understanding mean performance, then report means with confidence intervals.  If you care about the behavior of each agent, not just the mean, then consider reporting tolerance intervals.  4. In general we advocate that you do not report standard errors. They are like a low-confidence confidence interval, and it is more sensible to decide on the confidence interval you want to report.  5. The required number of runs depends on your performance distribution, which is unknown to you. It is clear that in almost all cases 5 runs is insufficient to make strong claims, but even 30 runs can be insufficient if the distribution is heavily skewed.  6. Consider reporting performance versus steps of Interaction, rather than performance versus episodes. This choice ensures every agent receives the same number of samples every run. (See Section 2.1) 7. Choose the number of steps of interaction to reflect early learning or ability to learn the optimal policy, rather than inheriting what was done in previous work.  8. Aggressive episode cutoffs can significantly skew results.](
-https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_b.png)
+<img alt="Key insights: evaluating a fully-specified algorithm 1. A single agent’s performance is informative, however, consider plotting the performance of individual runs to gain additional understanding of your algorithm.  2. Agent behavior, with the same algorithm and environment, can be very different across random seeds. Consider reporting this variability using sample standard deviations or tolerance intervals, rather than just reporting the mean or median performance.  3. Confidence intervals around the mean primarily tell us about our certainty in our mean estimate, not about the variability in the underlying agents. If you primarily care about understanding mean performance, then report means with confidence intervals.  If you care about the behavior of each agent, not just the mean, then consider reporting tolerance intervals.  4. In general we advocate that you do not report standard errors. They are like a low-confidence confidence interval, and it is more sensible to decide on the confidence interval you want to report.  5. The required number of runs depends on your performance distribution, which is unknown to you. It is clear that in almost all cases 5 runs is insufficient to make strong claims, but even 30 runs can be insufficient if the distribution is heavily skewed.  6. Consider reporting performance versus steps of Interaction, rather than performance versus episodes. This choice ensures every agent receives the same number of samples every run. (See Section 2.1) 7. Choose the number of steps of interaction to reflect early learning or ability to learn the optimal policy, rather than inheriting what was done in previous work.  8. Aggressive episode cutoffs can significantly skew results." src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_b.png">
 </p>
 
 <p>
@@ -63,14 +61,14 @@ It's easy to lie to your readers in any ML work, but in reinforcement learning i
 </p>
 
 <p>
-![4.1 Designer’s curse: with great knowledge comes great responsibility
+<img alt="4.1 Designer’s curse: with great knowledge comes great responsibility
 Evaluating your own algorithm is rife with bias. You know the ins and outs of your algorithm
 better than anyone on the planet. You have spent months working with different versions of
 your algorithm, tuning them for performance, finding environments where your algorithm
 shines, and discarding ones where your algorithm does not. The baselines you eventually
 compare against likely have not received the same attention. Worse, you will not have the
-same detailed understanding of those baselines, nor knowledge of how to tune them well.](
-https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_c.png)
+same detailed understanding of those baselines, nor knowledge of how to tune them well.
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_c.png">
 </p>
 
 <p>
@@ -78,8 +76,7 @@ And for the love of the great Flying Spaghetti Monster DO NOT TUNE ON YOUR SEED.
 </p>
 
 <p>
-![Remember, the seed is NOT a tuneable hyperparameter.](
-https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_d.png)
+<img alt="Remember, the seed is NOT a tuneable hyperparameter." src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_d.png">
 </p>
 
 <p>
@@ -97,8 +94,7 @@ given outcome. For instance, if we run DQN for a single random
 seed we will most likely observe an agent that achieves a return of
 approximately -450 by the end of learning. This density is estimated
 using 1000 independent DQN agents using the gaussian_kde kernel
-density estimation function in scipy.](
-https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_e.png
+density estimation function in scipy.](https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_e.png
 )
 </p>
 
@@ -111,7 +107,7 @@ This low key refutes the entire ML conference industrial complex.
 </p>
 
 <p>
-![4.3 Ranking algorithms (maybe don’t)
+<img alt="4.3 Ranking algorithms (maybe don’t)
 A common goal is to show that your new algorithm is better than some prior work. However,
 providing supporting evidence towards this claim can be exceptionally difficult. In fact,
 in all but the most rare cases, we might go so far as to say that providing such evidence
@@ -119,8 +115,7 @@ is entirely infeasible! The space of problem settings where any given algorithm 
 deployed is large and wholly unspecified; showing that any algorithm generally outperforms
 another across this space would be impossible without first defining the space. Even once
 this massive problem-space is well defined, gathering sufficient evidence to cover the space is
-likely intractable](
-https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_f.png)
+likely intractable" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_f.png">
 </p>
 
 <p>
@@ -129,10 +124,9 @@ Each RL algorithm is a special and unique snowflake. What if the real science is
 </p>
 
 <p>
-![The aim should not be to show an
+<img alt="The aim should not be to show an
 algorithm is good, but rather understand an algorithm’s properties, potentially
-relative to other algorithms.](
-https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_g.png)
+relative to other algorithms." src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_g.png">
 </p>
 
 <p>
@@ -140,11 +134,10 @@ As an absolute tour de force, the authors attempt what has so far only been drea
 </p>
 
 <p>
-![Figure 16: Our attempt to run an experiment that closely resembles the principles laid out
+<img alt="Figure 16: Our attempt to run an experiment that closely resembles the principles laid out
 in this document, particularly with respect to tuning baselines. For reference, the original
 experiments Haarnoja et al. (2018) conducted with SAC on Half Cheetah have been inset.
-DDPG has been tuned here for Half Cheetah. See text for details.](
-https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_h.png)
+DDPG has been tuned here for Half Cheetah. See text for details." src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_h.png">
 You like lists? The authors finish with a list of common errors in reinforcement learning experiments.
 </p>
 
