empirical RL post aded

--- a/empirical_design_rl.html
+++ b/empirical_design_rl.html
@@ -36,7 +36,8 @@ I mean, look at this opening paragraph. This is written to be read and understoo
 </p>
 
 <p>
-![Reinforcement Learning, an Empirical Science
+<figure>
+  <img title="Opening paragraph from the paper" alt="Reinforcement Learning, an Empirical Science
 Running a good experiment in reinforcement learning is difficult. There are many decisions
 to be made: How long should you run your agent? Should you count the number of episodes
 or number of steps? Should performance be measured online or offline with test trials?
@@ -44,8 +45,9 @@ How should you measure and aggregate performance? Do we use rules of thumb to se
 hyperparameters or some systematic search? What are the right baseline algorithms to
 compare against? Which environments should you use? What does good learning even look
 like in a given environment? The answer to each question can greatly impact the credibility
-and utility of the result, ranging from insightful to down-right misleading](https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_a.png
-"Opening paragraph from the paper")
+and utility of the result, ranging from insightful to down-right misleading" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_a.png">
+  <figcaption>Opening paragraph from the paper</figcaption>
+</figure>
 </p>
 
 <p>
@@ -85,7 +87,7 @@ No more.
 </p>
 
 <p>
-![A plot showing showing a bi-modal distribution of Return, P(M). There is a tall peak near -450 and a shorter peak near -325. 
+<img alt="A plot showing showing a bi-modal distribution of Return, P(M). There is a tall peak near -450 and a shorter peak near -325. 
 Caption:
 Figure 4: Performance distribution P(M) of DQN on Mountain Car
 with stepsize=2 to the −9. The performance M is the final performance of the agent after 100,000 steps of learning. The density around values
@@ -94,8 +96,8 @@ given outcome. For instance, if we run DQN for a single random
 seed we will most likely observe an agent that achieves a return of
 approximately -450 by the end of learning. This density is estimated
 using 1000 independent DQN agents using the gaussian_kde kernel
-density estimation function in scipy.](https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_e.png
-)
+density estimation function in scipy.
+" src="https://raw.githubusercontent.com/brohrer/blog_images/refs/heads/main/empirical_rl/img_e.png">
 </p>
 
 <p>
